<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dark"> <com.google.android.material.card.MaterialCardView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    app:cardBackgroundColor="@color/color_semi_dark" app:cardCornerRadius="16dp"
    app:cardElevation="12dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:text="@string/add_treasure"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/treasureNameField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:hint="@string/hint_enterTreasureName"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"
            android:backgroundTint="@color/color_accent" />

        <EditText
            android:id="@+id/treasureDescriptionField"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_margin="8dp"
            android:gravity="top"
            android:hint="@string/hint_enterTreasureDescription"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"
            android:backgroundTint="@color/color_accent" />

        <Button
            android:id="@+id/btnAddTreasure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/color_accent"
            android:text="@string/button_addTreasure"
            android:textColor="@color/color_dark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancelTreasure"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/button_cancel"
            android:textColor="@color/text_secondary" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>